feat: Add support for Bytes & Sized Bytes Arrays

--- a/src/EtherSharp/ABI/Encode/AbiEncoder.SizedNumberArrays.tt
+++ b/src/EtherSharp/ABI/Encode/AbiEncoder.SizedNumberArrays.tt
@@ -9,28 +9,28 @@ namespace EtherSharp.ABI;
 public partial class AbiEncoder
 {
     public AbiEncoder Int8Array(params sbyte[] value)
-        => AddElement(new AbiTypes.PrimitiveNumberArray<sbyte>(value, 8));
+        => AddElement(new AbiTypes.SizedNumberArray<sbyte>(value, 8));
     void IArrayAbiEncoder.Int8Array(params sbyte[] value)
         => Int8Array(value); 
     IDynamicTupleEncoder IDynamicTupleEncoder.Int8Array(params sbyte[] value)
         => Int8Array(value);
 
     public AbiEncoder UInt8Array(params byte[] value)
-        => AddElement(new AbiTypes.PrimitiveNumberArray<byte>(value, 8));
+        => AddElement(new AbiTypes.SizedNumberArray<byte>(value, 8));
     void IArrayAbiEncoder.UInt8Array(params byte[] value)
         => UInt8Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.UInt8Array(params byte[] value)
         => UInt8Array(value);
 
     public AbiEncoder Int16Array(params short[] value)
-        => AddElement(new AbiTypes.PrimitiveNumberArray<short>(value, 16));
+        => AddElement(new AbiTypes.SizedNumberArray<short>(value, 16));
     void IArrayAbiEncoder.Int16Array(params short[] value)
         => Int16Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.Int16Array(params short[] value)
         => Int16Array(value);
 
     public AbiEncoder UInt16Array(params ushort[] value)
-        => AddElement(new AbiTypes.PrimitiveNumberArray<ushort>(value, 16));
+        => AddElement(new AbiTypes.SizedNumberArray<ushort>(value, 16));
     void IArrayAbiEncoder.UInt16Array(params ushort[] value)
         => UInt16Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.UInt16Array(params ushort[] value)
@@ -41,14 +41,14 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>Array(params int[] value)
-        => AddElement(new AbiTypes.PrimitiveNumberArray<int>(value, <#=i#>));
+        => AddElement(new AbiTypes.SizedNumberArray<int>(value, <#=i#>));
     void IArrayAbiEncoder.Int<#=i#>Array(params int[] value)
         => Int<#=i#>Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.Int<#=i#>Array(params int[] value)
         => Int<#=i#>Array(value);
 
     public AbiEncoder UInt<#=i#>Array(params uint[] value)
-        => AddElement(new AbiTypes.PrimitiveNumberArray<uint>(value, <#=i#>));
+        => AddElement(new AbiTypes.SizedNumberArray<uint>(value, <#=i#>));
     void IArrayAbiEncoder.UInt<#=i#>Array(params uint[] value)
         => UInt<#=i#>Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.UInt<#=i#>Array(params uint[] value)
@@ -61,14 +61,14 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>Array(params long[] value)
-        => AddElement(new AbiTypes.PrimitiveNumberArray<long>(value, <#=i#>));
+        => AddElement(new AbiTypes.SizedNumberArray<long>(value, <#=i#>));
     void IArrayAbiEncoder.Int<#=i#>Array(params long[] value)
         => Int<#=i#>Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.Int<#=i#>Array(params long[] value)
         => Int<#=i#>Array(value);
 
     public AbiEncoder UInt<#=i#>Array(params ulong[] value)
-        => AddElement(new AbiTypes.PrimitiveNumberArray<ulong>(value, <#=i#>));
+        => AddElement(new AbiTypes.SizedNumberArray<ulong>(value, <#=i#>));
     void IArrayAbiEncoder.UInt<#=i#>Array(params ulong[] value)
         => UInt<#=i#>Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.UInt<#=i#>Array(params ulong[] value)
