--- a/src/EtherSharp/ABI/Decode/AbiDecoder.NumberArrays.tt
+++ b/src/EtherSharp/ABI/Decode/AbiDecoder.NumberArrays.tt
@@ -10,7 +10,7 @@ public partial class AbiDecoder
 {
     public sbyte[] Int8Array()
     {
-        var result = AbiTypes.PrimitiveNumberArray<sbyte>.Decode(_bytes, _bytesRead);
+        var result = AbiTypes.SizedNumberArray<sbyte>.Decode(_bytes, _bytesRead);
         ConsumeBytes();
         return result;
     }
@@ -21,7 +21,7 @@ public partial class AbiDecoder
 
     public byte[] UInt8Array()
     {
-        var result = AbiTypes.PrimitiveNumberArray<byte>.Decode(_bytes, _bytesRead);
+        var result = AbiTypes.SizedNumberArray<byte>.Decode(_bytes, _bytesRead);
         ConsumeBytes();
         return result;
     }
@@ -32,7 +32,7 @@ public partial class AbiDecoder
 
     public short[] Int16Array()
     {
-        var result = AbiTypes.PrimitiveNumberArray<short>.Decode(_bytes, _bytesRead);
+        var result = AbiTypes.SizedNumberArray<short>.Decode(_bytes, _bytesRead);
         ConsumeBytes();
         return result;
     }
@@ -43,7 +43,7 @@ public partial class AbiDecoder
 
     public ushort[] UInt16Array()
     {
-        var result = AbiTypes.PrimitiveNumberArray<ushort>.Decode(_bytes, _bytesRead);
+        var result = AbiTypes.SizedNumberArray<ushort>.Decode(_bytes, _bytesRead);
         ConsumeBytes();
         return result;
     }
@@ -55,7 +55,7 @@ public partial class AbiDecoder
 <#  for(var i = 24; i <= 32; i += 8) { #>
     public int[] Int<#=i#>Array()
     {
-        var result = AbiTypes.PrimitiveNumberArray<int>.Decode(_bytes, _bytesRead);
+        var result = AbiTypes.SizedNumberArray<int>.Decode(_bytes, _bytesRead);
         ConsumeBytes();
         return result;
     }
@@ -66,7 +66,7 @@ public partial class AbiDecoder
 
     public uint[] UInt<#=i#>Array()
     {
-        var result = AbiTypes.PrimitiveNumberArray<uint>.Decode(_bytes, _bytesRead);
+        var result = AbiTypes.SizedNumberArray<uint>.Decode(_bytes, _bytesRead);
         ConsumeBytes();
         return result;
     }
@@ -79,7 +79,7 @@ public partial class AbiDecoder
 <#  for(var i = 40; i <= 64; i += 8) { #>
     public long[] Int<#=i#>Array()
     {
-        var result = AbiTypes.PrimitiveNumberArray<long>.Decode(_bytes, _bytesRead);
+        var result = AbiTypes.SizedNumberArray<long>.Decode(_bytes, _bytesRead);
         ConsumeBytes();
         return result;
     }
@@ -90,7 +90,7 @@ public partial class AbiDecoder
 
     public ulong[] UInt<#=i#>Array()
     {
-        var result = AbiTypes.PrimitiveNumberArray<ulong>.Decode(_bytes, _bytesRead);
+        var result = AbiTypes.SizedNumberArray<ulong>.Decode(_bytes, _bytesRead);
         ConsumeBytes();
         return result;
     }
