--- a/src/EtherSharp/Query/QueryBuilder.AddQuery.tt
+++ b/src/EtherSharp/Query/QueryBuilder.AddQuery.tt
@@ -2,6 +2,8 @@
 <#@ assembly name="System.Core" #>
 <#@ import namespace="System.Linq" #>
 <#@ output extension=".cs" #>
+using EtherSharp.Query;
+
 namespace EtherSharp.Client.Modules.Query;
 public partial class QueryBuilder<TQuery>
 {
