doc: add more XML comments

--- a/src/EtherSharp/ABI/Decode/Interfaces/IArrayAbiDecoder.SizedNumberArrays.tt
+++ b/src/EtherSharp/ABI/Decode/Interfaces/IArrayAbiDecoder.SizedNumberArrays.tt
@@ -1,7 +1,6 @@
-<#@ template language="C#" #>
-<#@ output extension=".cs" #>
-using EtherSharp.Numerics;
-
+<#@ template language="C#" #><#
+#><#@ output extension=".cs" #><#
+#>using EtherSharp.Numerics;
 namespace EtherSharp.ABI.Decode.Interfaces;
 public partial interface IArrayAbiDecoder
 {
