--- a/src/EtherSharp/ABI/Decode/Interfaces/IDynamicTupleDecoder.SizedBytes.tt
+++ b/src/EtherSharp/ABI/Decode/Interfaces/IDynamicTupleDecoder.SizedBytes.tt
@@ -1,6 +1,6 @@
-<#@ template language="C#" #>
-<#@ output extension=".cs" #>
-namespace EtherSharp.ABI.Decode.Interfaces;
+<#@ template language="C#" #><#
+#><#@ output extension=".cs" #><#
+#>namespace EtherSharp.ABI.Decode.Interfaces;
 public partial interface IDynamicTupleDecoder
 {
     /// <summary>
