--- a/src/EtherSharp/ABI/Encode/Interfaces/IDynamicTupleEncoder.SizedBytes.tt
+++ b/src/EtherSharp/ABI/Encode/Interfaces/IDynamicTupleEncoder.SizedBytes.tt
@@ -1,8 +1,6 @@
-<#@ template language="C#" #>
-<#@ output extension=".cs" #>
-using EtherSharp.ABI.Fixed;
-
-namespace EtherSharp.ABI.Encode.Interfaces;
+<#@ template language="C#" #><#
+#><#@ output extension=".cs" #><#
+#>namespace EtherSharp.ABI.Encode.Interfaces;
 public partial interface IDynamicTupleEncoder 
 {
     /// <summary>
