--- a/src/EtherSharp/ABI/Encode/Interfaces/IDynamicTupleEncoder.SizedNumberArrays.tt
+++ b/src/EtherSharp/ABI/Encode/Interfaces/IDynamicTupleEncoder.SizedNumberArrays.tt
@@ -1,6 +1,6 @@
-<#@ template language="C#" #>
-<#@ output extension=".cs" #>
-using EtherSharp.Numerics;
+<#@ template language="C#" #><#
+#><#@ output extension=".cs" #><#
+#>using EtherSharp.Numerics;
 
 namespace EtherSharp.ABI.Encode.Interfaces;
 public partial interface IDynamicTupleEncoder 
