--- a/src/EtherSharp/Query/QueryBuilder.AddQuery.tt
+++ b/src/EtherSharp/Query/QueryBuilder.AddQuery.tt
@@ -2,6 +2,7 @@
 #>
 <#@ assembly name="System.Core" #>
 <#@ import namespace="System.Linq" #>
+<#@ import namespace="System.Collections.Generic" #>
 <#@ output extension=".cs" #><#
 #>using EtherSharp.Query;
 
@@ -9,38 +10,27 @@ namespace EtherSharp.Client.Modules.Query;
 
 public partial class QueryBuilder<TQuery>
 {
-    <#
+<#
     for (int n = 1; n <= 9; n++)
     {
     string genericParams = string.Join(", ", Enumerable.Range(1, n).Select(i => $"T{i}"));
     string queryableParams = string.Join(", ", Enumerable.Range(1, n).Select(i => $"IQuery<T{i}> c{i}"));
     string funcParams = string.Join(", ", Enumerable.Range(1, n).Select(i => $"T{i}"));
-    string funcArgs = string.Join(", ", Enumerable.Range(1, n).Select(i => $"T{i} p{i}"));
     string mapping = $"Func<{funcParams}, TQuery> mapping";
     string innerMapping = $"x => mapping({string.Join(", ", Enumerable.Range(1, n).Select(i => $"c{i}.ReadResultFrom(x[o{i}..])"))})";
 
-    string inputsCode = "";
-    string readArgs = "";
-    int resultIndex = 0;
-
-    for (int i = 1; i <= n; i++)
+    var inputLines = new List<string>(n * 2);
+    for(int i = 1; i <= n; i++)
     {
-        inputsCode += $@"
-        int o{i} = _queries.Count - resultIndex;
-        _queries.AddRange(c{i}.Queries);";
-        readArgs += $@"
-            c{i}.ReadResultFrom(x[o{i}..]),";
-        resultIndex++;
+        inputLines.Add($"int o{i} = _queries.Count;");
+        inputLines.Add($"_queries.AddRange(c{i}.Queries);");
     }
-
-    readArgs = readArgs.TrimEnd(',');
-    #>
-
+    string inputsCode = string.Join("\n        ", inputLines);
+#>
     public QueryBuilder<TQuery> AddQuery<<#=genericParams#>>(<#=queryableParams#>, <#=mapping#>)
     {
-        int resultIndex = _queries.Count;
         <#=inputsCode#>
-        _resultSelectorFunctions.Add((resultIndex, <#=innerMapping#>));
+        _resultSelectorFunctions.Add(<#=innerMapping#>);
         return this;
     }
 <#
